# Myoelectric-Prosthetic-Hand

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  emg_log.csv  emg_log_1.csv  emg_log_final.csv  emg_log_flex.csv  emg_log_rest.csv  emg_processing.cpp
apps/: main.cpp  servo_calibration.cpp
docs/: emg_debugging_session.md
include/: EMGLogger.hpp
include/motor/: MotorController.hpp  PCA9685.hpp
include/sensors/: EMGSensors.hpp
src/: EMGLogger.cpp
src/motor/: MotorController.cpp  PCA9685.cpp
src/sensors/: EMGSensors.cpp
